--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "16.0.3",
     "next-auth": "^4.24.13",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^10.1.0",
