--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
+    "lucide-react": "^0.556.0",
     "next": "16.0.3",
     "next-auth": "^4.24.13",
     "react": "19.2.0",
